fix download link list alignment icons

--- a/packages/assets/scss/03-organisms/_link-list.scss
+++ b/packages/assets/scss/03-organisms/_link-list.scss
@@ -58,6 +58,29 @@
       list-style: none;
       padding-left: 0;
     }
+
+    &:not(.ma__link-list__items--no-bullets) {
+      // align bullet point with download link icon
+
+      .ma__link-list__item {
+
+        .ma__download-link {
+
+          &__icon {
+            float: none;
+            display: inline-block;
+            width: unset;
+            margin-right: 0.5rem;
+            margin-bottom: 1rem;
+          }
+
+          &__title {
+            display: inline;
+            width: unset;
+          }
+        }
+      }
+    }
   }
 
   &__item {
